[package]
name = "rust-src"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = 3
lto = true